Fix(RoleName,InitData): Them RoleName.Moderator, them data mau cho role do